Cartes premières pages finies, mise à jour strategies